we're good to the point of deploymet securely getting up, need to check db reseeding with apropriate permissions and stuff, prod image was not modified afterall

--- a/forum_proj/.env
+++ b/forum_proj/.env
@@ -1,12 +1,15 @@
 DEBUG=False
-DJANGO_SECRET_KEY='some-insecure-key-fksfskjfsfsf'
+DJANGO_SECRET_KEY='some-insecure-key-fksfskjfsfsf' # secret
+
+# idk bout those 2 
 DJANGO_ALLOWED_HOSTS=127.0.0.1,localhost
 DJANGO_CSRF_TRUSTED_ORIGINS=http://localhost:8001,http://127.0.0.1:8001
-DJANGO_TIME_ZONE = UTC
 
-DB_ENGINE=mysql
-DB_NAME=forum_db
-DB_USER=forumdb_user
-DB_PASSWORD=rootpass
-DB_HOST=db
+DJANGO_TIME_ZONE = UTC # configmap
+
+DB_ENGINE=mysql # configmap
+DB_NAME=forum_db # secret
+DB_USER=forumdb_user # secret 
+DB_PASSWORD=1 # secret
+DB_HOST=db # chage for rds ARN 
 DB_PORT=3306
