--- a/k8s/external-secrets-secret-store.yaml
+++ b/k8s/external-secrets-secret-store.yaml
@@ -11,5 +11,5 @@ spec:
       auth:
         jwt:
           serviceAccountRef:
-            name: external-secrets
+            name: eso-irsa
             namespace: external-secrets
