--- a/forum_proj/compose.yaml
+++ b/forum_proj/compose.yaml
@@ -26,7 +26,7 @@ services:
       MYSQL_PASSWORD: ${DB_PASSWORD}
       MYSQL_ROOT_PASSWORD: ${DB_PASSWORD}
     volumes:
-      - base_vol:/data/db
+      - base_vol:/var/lib/mysql/
 
 volumes:
   base_vol:
