--- a/k8s/app_deployment.yaml
+++ b/k8s/app_deployment.yaml
@@ -25,7 +25,7 @@ spec:
     spec:
       containers:
       - name: forum-webapp
-        image: 954552668021.dkr.ecr.eu-north-1.amazonaws.com/forum-app-test-repo:v5
+        image: 954552668021.dkr.ecr.eu-north-1.amazonaws.com/forum-app-test-repo:ef4fbb102694da9e9993991552db4fc95e6da26c
         
         envFrom:
           - configMapRef: 
@@ -33,6 +33,9 @@ spec:
 
           - secretRef:
               name: forum-app-db-secrets
+
+          - secretRef:
+              name: forum-app-django-secrets
 
         resources:
           requests:
