--- a/k8s/forum-ingress.yaml
+++ b/k8s/forum-ingress.yaml
@@ -8,6 +8,7 @@ metadata:
     alb.ingress.kubernetes.io/scheme: internet-facing
     alb.ingress.kubernetes.io/target-type: ip
     alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:eu-north-1:954552668021:certificate/a82bef1b-4b67-48bc-807a-202de3f4eaf2
+    alb.ingress.kubernetes.io/ssl-policy: ELBSecurityPolicy-TLS13-1-2-2021-06
     alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80},{"HTTPS":443}]'
     alb.ingress.kubernetes.io/ssl-redirect: '443'
     alb.ingress.kubernetes.io/wafv2-acl-arn: 'arn:aws:wafv2:eu-north-1:954552668021:regional/webacl/forum-web-acl/cd4a491e-53a7-4394-b459-ea5f2fe3baee'
